Add fips crypto module to rebar.configs

--- a/src/bookshelf/rebar.config
+++ b/src/bookshelf/rebar.config
@@ -5,6 +5,7 @@
 {erl_dep_retries, 10}.
 
 {deps, [
+        {crypto, {git,"git://github.com/jaym/erlang-crypto2", {branch, "master"}}},
         {lager,".*", {git,"git://github.com/basho/lager", {tag, "2.1.1"}}},
         {opscoderl_wm, ".*",
          {git, "git://github.com/opscode/opscoderl_wm.git", {branch, "master"}}},
