--- a/src/chef-mover/rebar.config
+++ b/src/chef-mover/rebar.config
@@ -5,6 +5,7 @@
 {cover_enabled, true}.
 
 {deps, [
+        {crypto, {git,"git://github.com/jaym/erlang-crypto2", {branch, "master"}}},
         {lager, ".*",
          {git, "https://github.com/basho/lager", {branch, "master"}}},
         {opscoderl_wm, ".*",
