--- a/src/oc_bifrost/rebar.config
+++ b/src/oc_bifrost/rebar.config
@@ -13,6 +13,7 @@
   %% lager has to come first since we use its parse transform
   {lager, ".*",
    {git, "https://github.com/basho/lager.git", {tag, "2.1.1"}}},
+  {crypto, {git,"git://github.com/jaym/erlang-crypto2", {branch, "master"}}},
   {eper, ".*",
    {git, "git://github.com/massemanet/eper.git", {branch, "master"}}},
   {jiffy, ".*",
