--- a/src/oc_erchef/rebar.config
+++ b/src/oc_erchef/rebar.config
@@ -3,6 +3,7 @@
 %% ex: ts=4 sw=4 ft=erlang et
 
 {deps, [
+        {crypto, {git,"git://github.com/jaym/erlang-crypto2", {branch, "master"}}},
         {lager, ".*",
          {git, "https://github.com/basho/lager", {tag, "2.1.1"}}},
         {neotoma, "",
