--- a/omnibus/Gemfile
+++ b/omnibus/Gemfile
@@ -7,7 +7,7 @@ gem 'berkshelf'
 # Install omnibus software
 group :omnibus do
   gem 'omnibus', github: 'chef/omnibus'
-  gem 'omnibus-software', github: 'chef/omnibus-software', branch: 'jdm/win-fips'
+  gem 'omnibus-software', github: 'chef/omnibus-software', branch: 'jdm/server-fips'
 end
 
 group :test do
